Fix some bizarre behaviour with process dataframe creation that I'll never understand

--- a/renew/07-numpyro.ipynb
+++ b/renew/07-numpyro.ipynb
@@ -14,6 +14,8 @@
     "import numpyro\n",
     "from numpyro import distributions as dist\n",
     "import arviz as az\n",
+    "from plotly.subplots import make_subplots\n",
+    "import plotly.graph_objects as go\n",
     "pd.options.plotting.backend = 'plotly'\n",
     "\n",
     "from estival.sampling import tools as esamp\n",
@@ -137,15 +139,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_proc_vals_from_sample(renew_model, sample_idata):\n",
-    "    sample_df = esamp.xarray_to_sampleiterator(sample_idata).convert(\"pandas\")\n",
-    "    times = np.array(renew_model.model_times)\n",
-    "    proc_df = pd.DataFrame()\n",
-    "    for i in sample_df.index:\n",
-    "        y_vals = sinterp.get_scale_data(np.array(sample_df.loc[i, \"proc\"]))\n",
-    "        model_vals = np.exp(vmap(cosine_multicurve, in_axes=(0, None, None))(times, renew_model.x_proc_vals, y_vals))\n",
-    "        proc_df[i] = model_vals\n",
-    "    return proc_df"
+    "times = np.array(renew_model.model_times)\n",
+    "proc_df = pd.DataFrame()\n",
+    "for k, v in sample_params.iterrows():\n",
+    "    y_vals = sinterp.get_scale_data(np.array(v[\"proc\"]))\n",
+    "    model_vals = np.exp(vmap(cosine_multicurve, in_axes=(0, None, None))(times, renew_model.x_proc_vals, y_vals))\n",
+    "    proc_df[str(k)] = model_vals"
    ]
   },
   {
@@ -154,19 +153,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc_df = get_proc_vals_from_sample(renew_model, idata_sampled)\n",
-    "proc_df.columns = proc_df.columns.to_flat_index().map(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from plotly.subplots import make_subplots\n",
-    "import plotly.graph_objects as go\n",
-    "\n",
     "fig = make_subplots(rows=2, cols=1, shared_xaxes=True, vertical_spacing=0.05)\n",
     "fig.update_layout(margin={m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}, height=600)\n",
     "fig.add_traces(spaghetti.plot().data, rows=1, cols=1)\n",
@@ -190,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
