--- a/renew/07-numpyro.ipynb
+++ b/renew/07-numpyro.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Renewal model fitting\"\n",
+    "format: \n",
+    "  pdf\n",
+    "execute:\n",
+    "  echo: false\n",
+    "jupyter: python3\n",
+    "bibliography: renew.bib\n",
+    "csl: https://www.zotero.org/styles/the-lancet\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| warning: false\n",
     "from jax import jit, random, vmap\n",
     "from jax import numpy as jnp\n",
     "import numpy as np\n",
@@ -16,7 +33,8 @@
     "import arviz as az\n",
     "from plotly.subplots import make_subplots\n",
     "import plotly.graph_objects as go\n",
-    "pd.options.plotting.backend = 'plotly'\n",
+    "from IPython.display import Markdown\n",
+    "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
     "from estival.sampling import tools as esamp\n",
     "import summer2\n",
@@ -35,15 +53,8 @@
     "renew_model = JaxModel(33e6, 276, 30, 12, JaxGammaDens(), 50)\n",
     "\n",
     "def get_inc_result(renewal_model, gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
+    "\n",
     "renewal_wrap = jit(get_inc_result, static_argnames=[\"renewal_model\"])"
    ]
   },
@@ -60,7 +71,10 @@
     "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()[\"MYS\"]\n",
     "mys_data.index += run_in\n",
     "n_times = len(mys_data) + run_in\n",
-    "calib_kwargs = {\"pop\": 33e6, \"n_times\": n_times, \"run_in\": run_in, \"targets\": mys_data}"
+    "calib_kwargs = {\"pop\": 33e6, \"n_times\": n_times, \"run_in\": run_in, \"targets\": mys_data}\n",
+    "fixed_param_desc = \"### Fixed parameter values\\n \" \\\n",
+    "    f\"The target population is initialised as {str(int(calib_kwargs['pop']))} susceptible persons. \" \\\n",
+    "    f\"The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n\""
    ]
   },
   {
@@ -69,19 +83,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "priors = {\n",
-    "    \"gen_mean\": dist.Uniform(5.0, 12.0),\n",
-    "    \"gen_sd\": dist.Uniform(2.0, 7.0),\n",
-    "    \"proc\": dist.Uniform(np.repeat(-2.0, 12), np.repeat(2.0, 12)),\n",
-    "    \"seed\": dist.Uniform(5.0, 15.0),  # This is actually the log seed\n",
-    "    \"cdr\": dist.Uniform(0.05, 0.4),\n",
+    "# Define parameter ranges\n",
+    "scalar_req = {\n",
+    "    \"gen_mean\": {\"name\": \"Generation time mean (days)\", \"lower\": 5.0, \"upper\": 12.0},\n",
+    "    \"gen_sd\": {\"name\": \"Generation time standard deviation (days)\", \"lower\": 2.0, \"upper\": 7.0},\n",
+    "    \"cdr\": {\"name\": \"Case detection proportion\", \"lower\": 0.05, \"upper\": 0.4},\n",
+    "    \"seed\": {\"name\": \"Peak seed rate\", \"lower\": 5.0, \"upper\": 15.0},\n",
     "}\n",
+    "params_df = pd.DataFrame(scalar_req).transpose()\n",
+    "proc_req = {\"name\": \"proc\", \"lower\": -2.0, \"upper\": 2.0}\n",
+    "\n",
+    "priors = {}\n",
+    "for k, v in scalar_req.items():\n",
+    "    priors[k] = dist.Uniform(v[\"lower\"], v[\"upper\"])\n",
+    "priors[proc_req[\"name\"]] = dist.Uniform(np.repeat(proc_req[\"lower\"], n_process_periods), np.repeat(proc_req[\"upper\"], n_process_periods))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calib_desc = \"\\n\\n### Calibration targets\\nThe model described above was fit to the target data \" \\\n",
+    "    \"to minimise the density of the observed number of cases at each available data point \" \\\n",
+    "    \"from a normal distribution centred at the modelled notification rate. \" \\\n",
+    "    \"Modelled notifications are calculated as the product of modelled incidence and the \" \\\n",
+    "    \"(constant through time) case detection proportion. \"\n",
     "\n",
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, v) for k, v in priors.items()}\n",
     "    model_res = renewal_wrap(**param_updates, renewal_model=renew_model)\n",
     "    like = dist.Normal(model_res, jnp.std(jnp.array(mys_data)) * 0.1).log_prob(jnp.array(mys_data)).sum()\n",
     "    numpyro.factor(\"incidence\", like)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(calib_desc)"
    ]
   },
   {
@@ -153,10 +196,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Markdown(fixed_param_desc) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(calib_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig = make_subplots(rows=2, cols=1, shared_xaxes=True, vertical_spacing=0.05)\n",
     "fig.update_layout(margin={m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}, height=600)\n",
     "fig.add_traces(spaghetti.plot().data, rows=1, cols=1)\n",
     "fig.add_traces(proc_df.plot().data, rows=2, cols=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| label: fig-calib\n",
+    "#| fig-cap: \"Calibration to sample data from Malaysia\"\n",
+    "fig.write_image('calib_fig.svg')"
    ]
   }
  ],
