Move useful content of notebook 04 to 07

--- a/renew/07-numpyro.ipynb
+++ b/renew/07-numpyro.ipynb
@@ -73,7 +73,7 @@
     "n_times = len(mys_data) + run_in\n",
     "calib_kwargs = {\"pop\": 33e6, \"n_times\": n_times, \"run_in\": run_in, \"targets\": mys_data}\n",
     "fixed_param_desc = \"### Fixed parameter values\\n \" \\\n",
-    "    f\"The target population is initialised as {str(int(calib_kwargs['pop']))} susceptible persons. \" \\\n",
+    "    f\"The target population is initialised as {str(int(calib_kwargs[\"pop\"]))} susceptible persons. \" \\\n",
     "    f\"The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n\""
    ]
   },
@@ -91,12 +91,12 @@
     "    \"seed\": {\"name\": \"Peak seed rate\", \"lower\": 5.0, \"upper\": 15.0},\n",
     "}\n",
     "params_df = pd.DataFrame(scalar_req).transpose()\n",
-    "proc_req = {\"name\": \"proc\", \"lower\": -2.0, \"upper\": 2.0}\n",
+    "proc_req = {\"name\": \"Random process values\", \"lower\": -2.0, \"upper\": 2.0}\n",
     "\n",
     "priors = {}\n",
     "for k, v in scalar_req.items():\n",
     "    priors[k] = dist.Uniform(v[\"lower\"], v[\"upper\"])\n",
-    "priors[proc_req[\"name\"]] = dist.Uniform(np.repeat(proc_req[\"lower\"], n_process_periods), np.repeat(proc_req[\"upper\"], n_process_periods))"
+    "priors[\"proc\"] = dist.Uniform(np.repeat(proc_req[\"lower\"], n_process_periods), np.repeat(proc_req[\"upper\"], n_process_periods))"
    ]
   },
   {
@@ -228,7 +228,49 @@
    "source": [
     "#| label: fig-calib\n",
     "#| fig-cap: \"Calibration to sample data from Malaysia\"\n",
-    "fig.write_image('calib_fig.svg')"
+    "fig.write_image(\"calib_fig.svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(renew_model.get_full_desc())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params_df.loc[\"proc\", :] = proc_req\n",
+    "params_df.columns = [\"name\", \"Lower limit\", \"Upper limit\"]\n",
+    "params_df.index = params_df[\"name\"]\n",
+    "params_df = params_df.drop(columns=[\"name\"])\n",
+    "params_df.index.name = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(params_df.to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evidence_table = pd.DataFrame(index=params_df.index, columns=[\"Evidence\"])\n",
+    "evidence_table.loc[:, \"Evidence\"] = \"To be populated [@cori2013]\"\n",
+    "Markdown(evidence_table.to_markdown())"
    ]
   }
  ],
