Change approach to dataframe indexing to avoid bugs and improve consistency

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -73,7 +73,7 @@
     "n_times = len(mys_data) + run_in\n",
     "calib_kwargs = {\"pop\": 33e6, \"n_times\": n_times, \"run_in\": run_in, \"targets\": mys_data}\n",
     "fixed_param_desc = \"### Fixed parameter values\\n \" \\\n",
-    "    f\"The target population is initialised as {str(int(calib_kwargs[\"pop\"]))} susceptible persons. \" \\\n",
+    "    f\"The target population is initialised as {str(int(calib_kwargs['pop']))} susceptible persons. \" \\\n",
     "    f\"The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n\""
    ]
   },
@@ -170,8 +170,7 @@
     "spaghetti = pd.DataFrame()\n",
     "for i, p in enumerate(sample_params):\n",
     "    incidence = get_inc_result(renew_model, **p)\n",
-    "    spaghetti[i] = incidence\n",
-    "spaghetti.columns = sample_params.index.to_flat_index().map(str)\n",
+    "    spaghetti[str(i)] = incidence\n",
     "spaghetti.index += run_in\n",
     "spaghetti[\"targets\"] = mys_data"
    ]
