Centiles over dataframes

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -52,10 +52,10 @@
    "source": [
     "renew_model = JaxModel(33e6, 276, 30, 12, JaxGammaDens(), 50)\n",
     "\n",
-    "def get_inc_result(renewal_model, gen_mean, gen_sd, proc, seed, cdr):\n",
+    "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
     "\n",
-    "renewal_wrap = jit(get_inc_result, static_argnames=[\"renewal_model\"])"
+    "renewal_wrap = jit(get_inc_result)"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "\n",
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, v) for k, v in priors.items()}\n",
-    "    model_res = renewal_wrap(**param_updates, renewal_model=renew_model)\n",
+    "    model_res = renewal_wrap(**param_updates)\n",
     "    like = dist.Normal(model_res, jnp.std(jnp.array(mys_data)) * 0.1).log_prob(jnp.array(mys_data)).sum()\n",
     "    numpyro.factor(\"incidence\", like)"
    ]
@@ -155,7 +155,8 @@
    "outputs": [],
    "source": [
     "burn_in = 10\n",
-    "n_samples = 10\n",
+    "n_samples = 100\n",
+    "centiles = [0.05, 0.5, 0.95]\n",
     "idata_burnt = idata.sel(draw=slice(burn_in, None))\n",
     "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
     "sample_params = esamp.xarray_to_sampleiterator(idata_sampled)"
@@ -167,12 +168,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spaghetti = pd.DataFrame()\n",
-    "for i, p in enumerate(sample_params):\n",
-    "    incidence = get_inc_result(renew_model, **p)\n",
+    "spaghetti = pd.DataFrame(columns=[str(i) for i in sample_params.index])\n",
+    "for i, p in sample_params.iterrows():\n",
+    "    incidence = renewal_wrap(**p)\n",
     "    spaghetti[str(i)] = incidence\n",
-    "spaghetti.index += run_in\n",
-    "spaghetti[\"targets\"] = mys_data"
+    "spaghetti.index += run_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case_quantiles = spaghetti.quantile(centiles, axis=1).T"
    ]
   },
   {
@@ -183,10 +192,19 @@
    "source": [
     "times = np.array(renew_model.model_times)\n",
     "proc_df = pd.DataFrame()\n",
-    "for k, v in sample_params.iterrows():\n",
-    "    y_vals = sinterp.get_scale_data(np.array(v[\"proc\"]))\n",
+    "for i, p in sample_params.iterrows():\n",
+    "    y_vals = sinterp.get_scale_data(np.array(p[\"proc\"]))\n",
     "    model_vals = np.exp(vmap(cosine_multicurve, in_axes=(0, None, None))(times, renew_model.x_proc_vals, y_vals))\n",
-    "    proc_df[str(k)] = model_vals"
+    "    proc_df[str(i)] = model_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc_quantiles = proc_df.quantile(centiles, axis=1).T"
    ]
   },
   {
