Move process values calculation to its own method to avoid repeating code

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -172,15 +172,7 @@
     "for i, p in sample_params.iterrows():\n",
     "    incidence = renewal_wrap(**p)\n",
     "    spaghetti[str(i)] = incidence\n",
-    "spaghetti.index += run_in"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "spaghetti.index += run_in\n",
     "case_quantiles = spaghetti.quantile(centiles, axis=1).T"
    ]
   },
@@ -194,16 +186,8 @@
     "proc_df = pd.DataFrame()\n",
     "for i, p in sample_params.iterrows():\n",
     "    y_vals = sinterp.get_scale_data(np.array(p[\"proc\"]))\n",
-    "    model_vals = np.exp(vmap(cosine_multicurve, in_axes=(0, None, None))(times, renew_model.x_proc_vals, y_vals))\n",
-    "    proc_df[str(i)] = model_vals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    model_proc_vals = np.array(renew_model.fit_process_curve(y_vals))\n",
+    "    proc_df[str(i)] = model_proc_vals\n",
     "proc_quantiles = proc_df.quantile(centiles, axis=1).T"
    ]
   },
