Actually no need for the numpy conversion

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -186,7 +186,7 @@
     "proc_df = pd.DataFrame()\n",
     "for i, p in sample_params.iterrows():\n",
     "    y_vals = sinterp.get_scale_data(np.array(p[\"proc\"]))\n",
-    "    model_proc_vals = np.array(renew_model.fit_process_curve(y_vals))\n",
+    "    model_proc_vals = renew_model.fit_process_curve(y_vals)\n",
     "    proc_df[str(i)] = model_proc_vals\n",
     "proc_quantiles = proc_df.quantile(centiles, axis=1).T"
    ]
