Save very incomplete work with epoch integration

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -50,12 +50,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = JaxModel(33e6, 276, 30, 12, JaxGammaDens(), 50)\n",
-    "\n",
-    "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
-    "\n",
-    "renewal_wrap = jit(get_inc_result)"
+    "from summer2.utils import Epoch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_date = datetime(2019, 12, 31)\n",
+    "epoch = Epoch(ref_date)"
    ]
   },
   {
@@ -75,6 +80,30 @@
     "fixed_param_desc = \"### Fixed parameter values\\n \" \\\n",
     "    f\"The target population is initialised as {str(int(calib_kwargs['pop']))} susceptible persons. \" \\\n",
     "    f\"The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "select_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)]\n",
+    "select_int_idx = epoch.dti_to_index(select_data.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renew_model = JaxModel(33e6, select_int_idx[0] - run_in, select_int_idx[-1], 30, 12, JaxGammaDens(), 50)\n",
+    "\n",
+    "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
+    "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
+    "\n",
+    "renewal_wrap = jit(get_inc_result)"
    ]
   },
   {
@@ -105,6 +134,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "epoch.dti_to_index(select_data.index[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "calib_desc = \"\\n\\n### Calibration targets\\nThe model described above was fit to the target data \" \\\n",
     "    \"to minimise the density of the observed number of cases at each available data point \" \\\n",
     "    \"from a normal distribution centred at the modelled notification rate. \" \\\n",
@@ -114,7 +152,8 @@
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, v) for k, v in priors.items()}\n",
     "    model_res = renewal_wrap(**param_updates)\n",
-    "    like = dist.Normal(model_res, jnp.std(jnp.array(mys_data)) * 0.1).log_prob(jnp.array(mys_data)).sum()\n",
+    "    target = jnp.array(select_data)\n",
+    "    like = dist.Normal(model_res, jnp.std(target) * 0.1).log_prob(target).sum()\n",
     "    numpyro.factor(\"incidence\", like)"
    ]
   },
