--- a/renew/04-compare-jax.ipynb
+++ b/renew/04-compare-jax.ipynb
@@ -47,11 +47,20 @@
    "outputs": [],
    "source": [
     "window_len = 50\n",
-    "j = JaxModel(33e6, 276, 30, 12, JaxGammaDens(), window_len)\n",
+    "j = JaxModel(33e6, 0, 276, 30, 12, JaxGammaDens(), window_len)\n",
     "m = RenewalModel(33e6, 276, 30, 12)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed):\n",
     "    return j.func(gen_mean, gen_sd, proc, seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "incidence_j"
    ]
   },
   {
@@ -90,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
