Not sure what I'm doing, but make more changes that retain original behaviour

--- a/renew/04-compare-jax.ipynb
+++ b/renew/04-compare-jax.ipynb
@@ -60,6 +60,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "results_j = get_inc_result(gen_time_mean, gen_time_sd, proc_vals, seed_peak) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "incidence_j = get_inc_result(gen_time_mean, gen_time_sd, proc_vals, seed_peak).incidence\n",
     "incidence_m = m.func(gen_time_mean, gen_time_sd, proc_vals, seed_peak).incidence"
    ]
