Get proper calibration running correctly with new date approach, try again

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -59,8 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref_date = datetime(2019, 12, 31)\n",
-    "epoch = Epoch(ref_date)"
+    "epoch = Epoch(datetime(2019, 12, 31))"
    ]
   },
   {
@@ -73,12 +72,9 @@
     "n_process_periods = 12\n",
     "raw_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "raw_data.index = pd.to_datetime(raw_data.index)\n",
-    "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()[\"MYS\"]\n",
-    "mys_data.index += run_in\n",
-    "n_times = len(mys_data) + run_in\n",
-    "calib_kwargs = {\"pop\": 33e6, \"n_times\": n_times, \"run_in\": run_in, \"targets\": mys_data}\n",
+    "pop = 33e6\n",
     "fixed_param_desc = \"### Fixed parameter values\\n \" \\\n",
-    "    f\"The target population is initialised as {str(int(calib_kwargs['pop']))} susceptible persons. \" \\\n",
+    "    f\"The target population is initialised as {str(int(pop))} susceptible persons. \" \\\n",
     "    f\"The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n\""
    ]
   },
@@ -89,7 +85,7 @@
    "outputs": [],
    "source": [
     "select_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)]\n",
-    "select_int_idx = epoch.dti_to_index(select_data.index)"
+    "select_idx = epoch.dti_to_index(select_data.index)"
    ]
   },
   {
@@ -98,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renew_model = JaxModel(33e6, select_int_idx[0] - run_in, select_int_idx[-1], 30, 12, JaxGammaDens(), 50)\n",
+    "renew_model = JaxModel(33e6, int(select_idx[0] - run_in), int(select_idx[-1]) + 1, run_in, 12, JaxGammaDens(), 50)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
@@ -126,15 +122,6 @@
     "for k, v in scalar_req.items():\n",
     "    priors[k] = dist.Uniform(v[\"lower\"], v[\"upper\"])\n",
     "priors[\"proc\"] = dist.Uniform(np.repeat(proc_req[\"lower\"], n_process_periods), np.repeat(proc_req[\"upper\"], n_process_periods))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epoch.dti_to_index(select_data.index[0])"
    ]
   },
   {
