Tidy up epoch implementation

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -27,7 +27,7 @@
     "from jax import numpy as jnp\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "import numpyro\n",
     "from numpyro import distributions as dist\n",
     "import arviz as az\n",
@@ -38,6 +38,7 @@
     "\n",
     "from estival.sampling import tools as esamp\n",
     "import summer2\n",
+    "from summer2.utils import Epoch\n",
     "\n",
     "from emu_renewal.process import sinterp, cosine_multicurve\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
@@ -50,32 +51,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from summer2.utils import Epoch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epoch = Epoch(datetime(2019, 12, 31))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "run_in = 30\n",
     "n_process_periods = 12\n",
-    "raw_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
-    "raw_data.index = pd.to_datetime(raw_data.index)\n",
+    "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
+    "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
     "fixed_param_desc = \"### Fixed parameter values\\n \" \\\n",
     "    f\"The target population is initialised as {str(int(pop))} susceptible persons. \" \\\n",
-    "    f\"The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n\""
+    "    f\"The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n\"\n",
+    "analysis_start_time = datetime(2021, 3, 1)\n",
+    "analysis_end_time = datetime(2021, 11, 1)\n",
+    "select_data = mys_data.loc[analysis_start_time: analysis_end_time]"
    ]
   },
   {
@@ -84,17 +70,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)]\n",
-    "select_idx = epoch.dti_to_index(select_data.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "renew_model = JaxModel(33e6, int(select_idx[0] - run_in), int(select_idx[-1]) + 1, run_in, 12, JaxGammaDens(), 50)\n",
+    "start = analysis_start_time - timedelta(days=run_in)\n",
+    "end = analysis_end_time\n",
+    "distri = JaxGammaDens()\n",
+    "epoch = Epoch(datetime(2019, 12, 31))\n",
+    "renew_model = JaxModel(33e6, start, end, run_in, 12, distri, 50, epoch)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
