Proper indexing for full spaghetti output

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -174,11 +174,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_full_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
+    "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence * cdr\n",
+    "\n",
+    "full_wrap = jit(get_full_inc_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "spaghetti = pd.DataFrame(columns=[str(i) for i in sample_params.index])\n",
     "for i, p in sample_params.iterrows():\n",
-    "    incidence = renewal_wrap(**p)\n",
+    "    incidence = full_wrap(**p)\n",
     "    spaghetti[str(i)] = incidence\n",
-    "spaghetti.index += run_in\n",
+    "spaghetti.index = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
     "case_quantiles = spaghetti.quantile(centiles, axis=1).T"
    ]
   },
@@ -193,6 +205,7 @@
     "    y_vals = sinterp.get_scale_data(np.array(p[\"proc\"]))\n",
     "    model_proc_vals = renew_model.fit_process_curve(y_vals)\n",
     "    proc_df[str(i)] = model_proc_vals\n",
+    "proc_df.index = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
     "proc_quantiles = proc_df.quantile(centiles, axis=1).T"
    ]
   },
