Clean up outputs plotting

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -174,10 +174,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence * cdr\n",
+    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
+    "    return renew_model.func(gen_mean, gen_sd, proc, seed)\n",
     "\n",
-    "full_wrap = jit(get_full_inc_result)"
+    "full_wrap = jit(get_full_result)"
    ]
   },
   {
@@ -186,11 +186,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spaghetti = pd.DataFrame(columns=[str(i) for i in sample_params.index])\n",
+    "param_idx = [str(i) for i in sample_params.index]\n",
+    "cases_spagh = pd.DataFrame(columns=param_idx)\n",
+    "suscept_spagh = pd.DataFrame(columns=param_idx)\n",
+    "r_spagh = pd.DataFrame(columns=param_idx)\n",
     "for i, p in sample_params.iterrows():\n",
-    "    incidence = full_wrap(**p)\n",
-    "    spaghetti[str(i)] = incidence\n",
-    "spaghetti.index = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
+    "    result = full_wrap(**p)\n",
+    "    cases_spagh[str(i)] = result.incidence * p[\"cdr\"]\n",
+    "    suscept_spagh[str(i)] = result.suscept\n",
+    "    r_spagh[str(i)] = result.r_t\n",
+    "times = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
+    "cases_spagh.index = times\n",
+    "suscept_spagh.index = times\n",
+    "r_spagh.index = times\n",
     "case_quantiles = spaghetti.quantile(centiles, axis=1).T"
    ]
   },
@@ -233,10 +241,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = make_subplots(rows=2, cols=1, shared_xaxes=True, vertical_spacing=0.05)\n",
-    "fig.update_layout(margin={m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}, height=600)\n",
-    "fig.add_traces(spaghetti.plot().data, rows=1, cols=1)\n",
-    "fig.add_traces(proc_df.plot().data, rows=2, cols=1)"
+    "titles = [\"cases\", \"susceptibles\", \"transmission potential\", \"R\"]\n",
+    "fig = make_subplots(rows=2, cols=2, shared_xaxes=True, vertical_spacing=0.05, horizontal_spacing=0.05, subplot_titles=titles)\n",
+    "fig.update_layout(margin={m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}, height=700)\n",
+    "fig.add_traces(cases_spagh.plot().data, rows=1, cols=1)\n",
+    "fig.add_trace(go.Scatter(x=select_data.index, y=select_data, mode=\"markers\"), row=1, col=1)\n",
+    "fig.add_traces(proc_df.plot().data, rows=2, cols=1)\n",
+    "fig.add_traces(suscept_spagh.plot().data, rows=1, cols=2)\n",
+    "fig.add_traces(r_spagh.plot().data, rows=2, cols=2)"
    ]
   },
   {
