Revise outputs for new approach

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -42,7 +42,8 @@
     "\n",
     "from emu_renewal.process import sinterp, cosine_multicurve\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
-    "from emu_renewal.renew import JaxModel"
+    "from emu_renewal.renew import JaxModel\n",
+    "from emu_renewal.outputs import plot_spaghetti, plot_uncertainty_patches"
    ]
   },
   {
@@ -190,30 +191,22 @@
     "cases_spagh = pd.DataFrame(columns=param_idx)\n",
     "suscept_spagh = pd.DataFrame(columns=param_idx)\n",
     "r_spagh = pd.DataFrame(columns=param_idx)\n",
+    "proc_df = pd.DataFrame()\n",
     "for i, p in sample_params.iterrows():\n",
     "    result = full_wrap(**p)\n",
     "    cases_spagh[str(i)] = result.incidence * p[\"cdr\"]\n",
     "    suscept_spagh[str(i)] = result.suscept\n",
     "    r_spagh[str(i)] = result.r_t\n",
+    "    y_vals = sinterp.get_scale_data(np.array(p[\"proc\"]))\n",
+    "    proc_df[str(i)] = renew_model.fit_process_curve(y_vals)\n",
     "times = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
     "cases_spagh.index = times\n",
     "suscept_spagh.index = times\n",
     "r_spagh.index = times\n",
-    "case_quantiles = spaghetti.quantile(centiles, axis=1).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "proc_df = pd.DataFrame()\n",
-    "for i, p in sample_params.iterrows():\n",
-    "    y_vals = sinterp.get_scale_data(np.array(p[\"proc\"]))\n",
-    "    model_proc_vals = renew_model.fit_process_curve(y_vals)\n",
-    "    proc_df[str(i)] = model_proc_vals\n",
     "proc_df.index = renew_model.epoch.index_to_dti(renew_model.model_times)\n",
+    "case_quantiles = cases_spagh.quantile(centiles, axis=1).T\n",
+    "suscept_quantiles = suscept_spagh.quantile(centiles, axis=1).T\n",
+    "r_quantiles = r_spagh.quantile(centiles, axis=1).T\n",
     "proc_quantiles = proc_df.quantile(centiles, axis=1).T"
    ]
   },
@@ -242,13 +235,17 @@
    "outputs": [],
    "source": [
     "titles = [\"cases\", \"susceptibles\", \"transmission potential\", \"R\"]\n",
-    "fig = make_subplots(rows=2, cols=2, shared_xaxes=True, vertical_spacing=0.05, horizontal_spacing=0.05, subplot_titles=titles)\n",
-    "fig.update_layout(margin={m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}, height=700)\n",
-    "fig.add_traces(cases_spagh.plot().data, rows=1, cols=1)\n",
-    "fig.add_trace(go.Scatter(x=select_data.index, y=select_data, mode=\"markers\"), row=1, col=1)\n",
-    "fig.add_traces(proc_df.plot().data, rows=2, cols=1)\n",
-    "fig.add_traces(suscept_spagh.plot().data, rows=1, cols=2)\n",
-    "fig.add_traces(r_spagh.plot().data, rows=2, cols=2)"
+    "margins = {m: 20 for m in [\"t\", \"b\", \"l\", \"r\"]}\n",
+    "spagh_fig = plot_spaghetti(cases_spagh, select_data, proc_df, suscept_spagh, r_spagh, margins, titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_fig = plot_uncertainty_patches(case_quantiles, select_data, proc_quantiles, suscept_quantiles, r_quantiles, margins, titles)"
    ]
   },
   {
@@ -259,7 +256,7 @@
    "source": [
     "#| label: fig-calib\n",
     "#| fig-cap: \"Calibration to sample data from Malaysia\"\n",
-    "fig.write_image(\"calib_fig.svg\")"
+    "patch_fig.write_image(\"patch_fig.svg\")"
    ]
   },
   {
