Switch to filling to self to make code simpler and more terse

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -254,6 +254,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "patch_fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| label: fig-calib\n",
     "#| fig-cap: \"Calibration to sample data from Malaysia\"\n",
     "patch_fig.write_image(\"patch_fig.svg\")"
