More elegant functional structure to plotting code

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -43,7 +43,7 @@
     "from emu_renewal.process import sinterp, cosine_multicurve\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import plot_spaghetti, plot_uncertainty_patches"
+    "from emu_renewal.outputs import plot_spaghetti, get_plotly_area_from_df"
    ]
   },
   {
@@ -245,16 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patch_fig = plot_uncertainty_patches(case_quantiles, select_data, proc_quantiles, suscept_quantiles, r_quantiles, margins, titles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "patch_fig"
+    "plot_uncertainty_patches(case_quantiles, select_data, proc_quantiles, suscept_quantiles, r_quantiles, margins, titles)"
    ]
   },
   {
