--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -35,6 +35,8 @@
     "import plotly.graph_objects as go\n",
     "from IPython.display import Markdown\n",
     "pd.options.plotting.backend = \"plotly\"\n",
+    "import plotly.express as px\n",
+    "colours = px.colors.qualitative.Plotly\n",
     "\n",
     "from estival.sampling import tools as esamp\n",
     "import summer2\n",
@@ -43,7 +45,7 @@
     "from emu_renewal.process import sinterp, cosine_multicurve\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import plot_spaghetti, get_plotly_area_from_df"
+    "from emu_renewal.outputs import plot_spaghetti, get_plotly_area_from_df, plot_uncertainty_patches"
    ]
   },
   {
@@ -245,7 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_uncertainty_patches(case_quantiles, select_data, proc_quantiles, suscept_quantiles, r_quantiles, margins, titles)"
+    "patch_fig = plot_uncertainty_patches(case_quantiles, select_data, proc_quantiles, suscept_quantiles, r_quantiles, margins, titles, colours)\n",
+    "patch_fig"
    ]
   },
   {
