Change likelihood calculation to be log based

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -121,9 +121,10 @@
     "\n",
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, v) for k, v in priors.items()}\n",
-    "    model_res = renewal_wrap(**param_updates)\n",
-    "    target = jnp.array(select_data)\n",
-    "    like = dist.Normal(model_res, jnp.std(target) * 0.1).log_prob(target).sum()\n",
+    "    log_model_res = jnp.log(renewal_wrap(**param_updates))\n",
+    "    log_target = jnp.log(jnp.array(select_data))\n",
+    "    dispersion = numpyro.sample(\"dispersion\", dist.Uniform(jnp.log(1.0), jnp.log(1.5)))\n",
+    "    like = dist.Normal(log_model_res, dispersion).log_prob(log_target).sum()\n",
     "    numpyro.factor(\"incidence\", like)"
    ]
   },
@@ -177,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
+    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr, dispersion):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed)\n",
     "\n",
     "full_wrap = jit(get_full_result)"
