Revise likelihood function and simplify plotting functions further

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -125,7 +125,7 @@
     "    log_target = jnp.log(jnp.array(select_data))\n",
     "    dispersion = numpyro.sample(\"dispersion\", dist.Uniform(jnp.log(1.0), jnp.log(1.5)))\n",
     "    like = dist.Normal(log_model_res, dispersion).log_prob(log_target).sum()\n",
-    "    numpyro.factor(\"incidence\", like)"
+    "    numpyro.factor(\"notifications_ll\", like)"
    ]
   },
   {
