First draft of proper random process

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "run_in = 30\n",
-    "n_process_periods = 12\n",
+    "n_process_periods = 16\n",
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
@@ -74,7 +74,8 @@
     "end = analysis_end_time\n",
     "distri = JaxGammaDens()\n",
     "epoch = Epoch(datetime(2019, 12, 31))\n",
-    "renew_model = JaxModel(33e6, start, end, run_in, 12, distri, 50, epoch)\n",
+    "# Needs run_in to know when process begins\n",
+    "renew_model = JaxModel(33e6, start, end, run_in, n_process_periods, distri, 50, epoch, run_in)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
@@ -90,7 +91,7 @@
    "source": [
     "# Define parameter ranges\n",
     "scalar_req = {\n",
-    "    \"gen_mean\": {\"name\": \"Generation time mean (days)\", \"lower\": 5.0, \"upper\": 12.0},\n",
+    "    \"gen_mean\": {\"name\": \"Generation time mean (days)\", \"lower\": 5.0, \"upper\": 20.0},\n",
     "    \"gen_sd\": {\"name\": \"Generation time standard deviation (days)\", \"lower\": 2.0, \"upper\": 7.0},\n",
     "    \"cdr\": {\"name\": \"Case detection proportion\", \"lower\": 0.05, \"upper\": 0.4},\n",
     "    \"seed\": {\"name\": \"Peak seed rate\", \"lower\": 5.0, \"upper\": 15.0},\n",
@@ -100,8 +101,7 @@
     "\n",
     "priors = {}\n",
     "for k, v in scalar_req.items():\n",
-    "    priors[k] = dist.Uniform(v[\"lower\"], v[\"upper\"])\n",
-    "priors[\"proc\"] = dist.Uniform(np.repeat(proc_req[\"lower\"], n_process_periods), np.repeat(proc_req[\"upper\"], n_process_periods))"
+    "    priors[k] = dist.Uniform(v[\"lower\"], v[\"upper\"])\n"
    ]
   },
   {
@@ -114,13 +114,25 @@
     "    \"to minimise the density of the observed number of cases at each available data point \" \\\n",
     "    \"from a normal distribution centred at the modelled notification rate. \" \\\n",
     "    \"Modelled notifications are calculated as the product of modelled incidence and the \" \\\n",
-    "    \"(constant through time) case detection proportion. \"\n",
-    "\n",
+    "    \"(constant through time) case detection proportion. \"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def calib_model():\n",
     "    param_updates = {k: numpyro.sample(k, v) for k, v in priors.items()}\n",
-    "    model_res = renewal_wrap(**param_updates)\n",
-    "    target = jnp.array(select_data)\n",
-    "    like = dist.Normal(model_res, jnp.std(target) * 0.1).log_prob(target).sum()\n",
+    "    proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.Uniform(0.0,1.0))\n",
+    "    #proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.TruncatedNormal(0.0,0.25,low=0.0))\n",
+    "    proc_dist = dist.Normal(jnp.repeat(0.0, n_process_periods), proc_dispersion)\n",
+    "    param_updates[\"proc\"] = numpyro.sample(\"proc\", proc_dist)\n",
+    "    logmodel_res = jnp.log(renewal_wrap(**param_updates))\n",
+    "    logtarget = jnp.log(jnp.array(select_data))\n",
+    "    dispersion = numpyro.sample(\"dispersion\", dist.Uniform(jnp.log(1.0), jnp.log(1.5)))\n",
+    "    like = dist.Normal(logmodel_res, dispersion).log_prob(logtarget).sum()\n",
     "    numpyro.factor(\"incidence\", like)"
    ]
   },
@@ -139,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kernel = numpyro.infer.NUTS(calib_model, dense_mass=True)\n",
+    "kernel = numpyro.infer.NUTS(calib_model, dense_mass=False)\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
     "mcmc.run(rng_key, extra_fields=(\"accept_prob\",))"
@@ -160,8 +172,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "burn_in = 10\n",
-    "n_samples = 100\n",
+    "az.summary(idata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.plot_posterior(idata);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.summary(idata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.plot_posterior(idata);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.summary(idata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "burn_in = 0\n",
+    "n_samples = 1000\n",
     "centiles = [0.05, 0.5, 0.95]\n",
     "idata_burnt = idata.sel(draw=slice(burn_in, None))\n",
     "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
@@ -191,6 +248,7 @@
     "suscept_spagh = pd.DataFrame(columns=param_idx)\n",
     "r_spagh = pd.DataFrame(columns=param_idx)\n",
     "for i, p in sample_params.iterrows():\n",
+    "    p = {k:v for k,v in p.items() if \"dispersion\" not in k}\n",
     "    result = full_wrap(**p)\n",
     "    cases_spagh[str(i)] = result.incidence * p[\"cdr\"]\n",
     "    suscept_spagh[str(i)] = result.suscept\n",
@@ -199,7 +257,29 @@
     "cases_spagh.index = times\n",
     "suscept_spagh.index = times\n",
     "r_spagh.index = times\n",
-    "case_quantiles = spaghetti.quantile(centiles, axis=1).T"
+    "case_quantiles = cases_spagh.quantile(centiles, axis=1).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.plotting.backend = \"matplotlib\"\n",
+    "case_quantiles.plot()\n",
+    "select_data.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.plotting.backend = \"matplotlib\"\n",
+    "case_quantiles.plot()\n",
+    "select_data.plot()"
    ]
   },
   {
@@ -321,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
