Correct import statement in notebook

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -45,7 +45,7 @@
     "from emu_renewal.process import sinterp, cosine_multicurve\n",
     "from emu_renewal.distributions import JaxGammaDens\n",
     "from emu_renewal.renew import JaxModel\n",
-    "from emu_renewal.outputs import plot_spaghetti, get_plotly_area_from_df, plot_uncertainty_patches"
+    "from emu_renewal.outputs import plot_spaghetti, get_area_from_df, plot_uncertainty_patches"
    ]
   },
   {
