Set random process to zero before the start of the simulation

--- a/renew/05-nuts-calibration.ipynb
+++ b/renew/05-nuts-calibration.ipynb
@@ -77,7 +77,7 @@
     "end = analysis_end_time\n",
     "distri = JaxGammaDens()\n",
     "epoch = Epoch(datetime(2019, 12, 31))\n",
-    "renew_model = JaxModel(33e6, start, end, run_in, 12, distri, 50, epoch)\n",
+    "renew_model = JaxModel(33e6, start, end, run_in, 12, distri, 50, epoch, run_in)\n",
     "\n",
     "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
